# Flask_V1

./: .gitignore  AnalyzeResults.py  CreateDatabase.py  DataManager.py  Database_setup.md  Dockerfile  Updated_readme.md  database.db  docker-compose.yaml  main.py  pivoted_output2.csv  pyproject.toml  requirements.txt
.github/workflows/: action.yaml  main_flask-v1.yml
data/8320dacc-bdb6-4a77-b733-033ea0b75ead/: 8320dacc-bdb6-4a77-b733-033ea0b75ead.json
data/d100258f-87fe-47f8-9220-8fca12fe942a/: d100258f-87fe-47f8-9220-8fca12fe942a.json
data/ff39be79-6909-4b33-9a66-c110956ffd58/: ff39be79-6909-4b33-9a66-c110956ffd58.json
reproHum_project_template_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: eval_template_v2.html  evaluation_template_with_placeholders.html
